SF Primes/src/objects/Recap_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AllWebsiteField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllWebsiteField?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMW_CPO_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMW CPO Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAP_Email_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAP Email Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMA_Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMA_RdRecapComplete__c</fullName>
        <label>LMA_RdRecapComplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_RecapComplete__c</fullName>
        <label>LMA_RecapComplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_RecapInComplete__c</fullName>
        <label>LMA_RecapInComplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Started__c</fullName>
        <label>LMA_Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_WithLMAteam__c</fullName>
        <label>LMA_WithLMAteam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Working__c</fullName>
        <label>LMA_Working</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_sObject_Type__c</fullName>
        <description>The type of the sObject listed in the Lookup relationship field.</description>
        <inlineHelpText>The type of the sObject listed in the Lookup relationship field.</inlineHelpText>
        <label>Lookup sObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_sObject__c</fullName>
        <label>Lookup sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Or_Field_API_Name__c</fullName>
        <description>An alternate field for the (Field API Name).</description>
        <inlineHelpText>An alternate field for the (Field API Name).</inlineHelpText>
        <label>Or Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Marketing Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerBrand_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PowerBrand Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PowerSEO Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerSearch_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POWERSEARCH_PRODUCT__C</description>
        <label>PowerSearch Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_Non_LMA_Order__c</fullName>
        <label>Recap_Non_LMA_Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation_Management_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reputation Management Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Essentials_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search Essentials Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recap Field</label>
</CustomObject>